# TypeVoice

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  pytest.ini  requirements-asr.txt  requirements.txt
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: cd.yml  ci.yml  codeql.yml  scorecards.yml
apps/desktop/: README.md  index.html  package-lock.json  package.json
apps/desktop/public/fonts/: OFL.txt
apps/desktop/src/: App.css  App.tsx  OverlayApp.tsx  main.tsx  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: asr_service.rs  audio_capture.rs  audio_device_notifications_windows.rs  audio_devices_windows.rs  commands.rs  context_capture.rs  context_capture_windows.rs  context_pack.rs  data_dir.rs  debug_log.rs  dictionary.rs  export.rs  history.rs  hotkeys.rs  insertion.rs  lib.rs  llm.rs  main.rs  metrics.rs  model.rs  panic_log.rs  pipeline.rs  ports.rs  python_runtime.rs  record_input.rs  record_input_cache.rs  remote_asr.rs  rewrite.rs  safe_print.rs  settings.rs  startup_trace.rs  task_manager.rs  templates.rs  toolchain.rs  trace.rs  transcription.rs  transcription_actor.rs  ui_events.rs  voice_tasks.rs  voice_workflow.rs
apps/desktop/src-tauri/src/obs/: debug.rs  mod.rs  panic.rs  schema.rs  startup.rs  trace.rs
apps/desktop/src-tauri/toolchain/: ffmpeg_manifest.json
apps/desktop/src/domain/: diagnostic.ts  overlaySession.ts  workflowView.ts
apps/desktop/src/infra/: backendClient.ts  runtimePorts.ts
apps/desktop/src/lib/: audio.ts  clipboard.ts
apps/desktop/src/screens/: HistoryScreen.tsx  MainScreen.tsx  SettingsScreen.tsx
apps/desktop/src/styles/: app.css
apps/desktop/src/ui/: PixelButton.tsx  PixelDialog.tsx  PixelInput.tsx  PixelSelect.tsx  PixelTabs.tsx  PixelToast.tsx  PixelToggle.tsx  icons.tsx
asr_runner/: __init__.py  runner.py
crates/typevoice-core/: Cargo.toml
crates/typevoice-core/src/: context_pack.rs  lib.rs  ports.rs
crates/typevoice-engine/: Cargo.toml
crates/typevoice-engine/src/: audio_capture.rs  lib.rs  pcm.rs  rewrite.rs  task_manager.rs  transcription.rs  transcription_actor.rs  ui_events.rs  voice_tasks.rs  voice_workflow.rs
crates/typevoice-observability/: Cargo.toml
crates/typevoice-observability/src/: lib.rs
crates/typevoice-observability/src/obs/: debug.rs  metrics.rs  mod.rs  panic.rs  schema.rs  startup.rs  trace.rs  writer.rs
crates/typevoice-platform/: Cargo.toml
crates/typevoice-platform/src/: audio_device_notifications_windows.rs  audio_devices_windows.rs  context_capture.rs  context_capture_windows.rs  export.rs  insertion.rs  lib.rs  overlay_layout.rs  pipeline.rs  record_input.rs  record_input_cache.rs  subprocess.rs  toolchain.rs
crates/typevoice-providers/: Cargo.toml
crates/typevoice-providers/src/: doubao_asr.rs  lib.rs  llm.rs  remote_asr.rs
crates/typevoice-storage/: Cargo.toml
crates/typevoice-storage/src/: data_dir.rs  history.rs  lib.rs  settings.rs  templates.rs
docs/: architecture-v0.1.md  architecture.md  base-spec-v0.1.md  base-spec.md  fixtures-sources-v0.1.md  fixtures-sources.md  index.md  llm-prompt-lab-v0.1.md  llm-prompt-lab.md  perf-spike-plan-v0.1.md  perf-spike.md  privacy-data-flow.md  release-process.md  repository-automation.md  roadmap-v0.1.md  roadmap.md  tasks-v0.1.md  tasks.md  tech-spec-v0.1.md  tech-spec.md  verification-v0.1.md  verification.md  windows-dev-from-wsl-v0.1.md  windows-dev.md  windows-gate-v0.1.md  windows-gate.md
docs/memory/: CONTINUITY.md  DECISIONS.md  PITFALLS.md  SPEC.md  USER_PREFS.md
scripts/: _verify_util.py  download_asr_model.py  download_ffmpeg_toolchain.sh  download_fixtures.py  fixtures_manifest.json  llm_prompt_lab.py  verify_full.py  verify_quick.py
scripts/windows/: download_ffmpeg_toolchain.ps1  run-latest.ps1  windows_compile_gate.ps1  windows_gate.ps1
tests/: test_asr_protocol.py  test_verify_util.py
tools/typevoice-tools/: Cargo.toml
tools/typevoice-tools/src/: main.rs
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs
