[package]
name = "typevoice-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
flate2 = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["custom-protocol"] }
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tokio-util = "0.7"
typevoice-core = { path = "../typevoice-core" }
typevoice-observability = { path = "../typevoice-observability" }
typevoice-platform = { path = "../typevoice-platform" }
typevoice-providers = { path = "../typevoice-providers" }
typevoice-storage = { path = "../typevoice-storage" }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
