[package]
name = "typevoice-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
arboard = "3"
hex = "0.4"
png = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["custom-protocol"] }
tokio = { version = "1", features = ["time"] }
tokio-util = "0.7"
typevoice-core = { path = "../typevoice-core" }
typevoice-observability = { path = "../typevoice-observability" }
typevoice-storage = { path = "../typevoice-storage" }
uuid = { version = "1", features = ["v4"] }
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Storage_Xps",
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "implement",
  "Win32_Foundation",
  "Win32_Devices_FunctionDiscovery",
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_UI_Shell_PropertiesSystem",
] }
windows-core = "0.58"

[target.'cfg(target_os = "linux")'.dependencies]
atspi = { version = "0.29.0", features = ["tokio"] }

[dev-dependencies]
tempfile = "3"
