[package]
name = "typevoice-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typevoice-observability = { path = "../typevoice-observability" }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
