[package]
name = "typevoice-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "typevoice_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Required for production builds to load the bundled frontend (tauri://localhost)
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
base64 = "0.22"
keyring = { version = "3", features = ["windows-native"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
png = "0.17"
arboard = "3"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Storage_Xps",
] }

[target.'cfg(target_os = "linux")'.dependencies]
atspi = { version = "0.29.0", features = ["tokio"] }

[dev-dependencies]
tempfile = "3"

[profile.dev]
# Speed up dev iterations: reduce debug info to lower link time while keeping backtraces usable.
debug = 1
