[package]
name = "typevoice-desktop"
version = "0.1.0"
description = "TypeVoice desktop app built with Tauri"
authors = ["Jiajun Deng <3230105930@zju.edu.cn>"]
license = "MIT"
repository = "https://github.com/JiaJunDeng5930/TypeVoice"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "typevoice_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Required for production builds to load the bundled frontend (tauri://localhost)
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
typevoice-core = { path = "../../../crates/typevoice-core" }
typevoice-engine = { path = "../../../crates/typevoice-engine" }
typevoice-observability = { path = "../../../crates/typevoice-observability" }
typevoice-platform = { path = "../../../crates/typevoice-platform" }
typevoice-providers = { path = "../../../crates/typevoice-providers" }
typevoice-storage = { path = "../../../crates/typevoice-storage" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
